--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,8 +3,8 @@
 
 <section class="navbar-background
                 md:bg-none">
-    <section class="z-10 w-full px-20 py-5 whitespace-normal flex justify-center">
-        <app-generic-title size="large">
+    <section class="z-10 w-full md:px-20 pt-5 whitespace-normal flex justify-center">
+        <app-generic-title size="large" lineHeight="1.5 !important">
             Nous transformons <br />
             vos <span class="text-blue-600">idées </span>en <span class="text-blue-600">succès</span>.
         </app-generic-title>
@@ -25,7 +25,6 @@
 <!-- technologies used + recruitment + news -->
 <section class="navbar-background overflow-hidden">
   <app-orbit-technology></app-orbit-technology>
-
   <app-recruitment></app-recruitment>
   <app-news></app-news>
 </section>
