--- a/src/app/cards/project-card/project-card.html
+++ b/src/app/cards/project-card/project-card.html
@@ -1,4 +1,4 @@
-<div class="relative w-[70vw] h-64 top-4 md:w-7/12 md:h-72 !mx-6
+<div class="relative w-[90vw] sm:w-[70vw] h-64 top-4 md:w-7/12 md:h-72 !mx-6
             md:mx-0 md:mb-12 rounded-full"
     >
     <!-- Bottom base Layer: the blue -->
@@ -25,7 +25,7 @@
         </div>
 
         <!-- content: tags + title + description -->
-        <div class="flex flex-col space-y-8 space-x-8 flex-wrap w-full">
+        <div class="flex flex-col px-1 space-y-8 space-x-8 flex-wrap w-full">
             <!-- tags -->
             <div class="flex ml-4 md:flex-row-reverse flex-wrap gap-2 mt-4 md:!mr-4">
                 <div *ngFor="let tag of project.tags; let i = index">
