--- a/src/app/cards/used-tech-card/used-tech-card.html
+++ b/src/app/cards/used-tech-card/used-tech-card.html
@@ -1,5 +1,5 @@
-<div #card class="pl-4 py-6 w-[380px] h-52 xl:w-96 xl:h-60 flex flex-col items-center justify-center gap-4 bg-[#EAF6FD] specialFont shadowCustom rounded-3xl">
-  <div class="w-full flex justify-start" >
+<div #card class="pl-4 py-6 w-[90vw] xs:w-[310px] sm:w-[380px] h-52 xl:w-96 xl:h-60 flex flex-col items-center gap-6 bg-[#EAF6FD] specialFont shadowCustom rounded-3xl">
+  <div class="w-full flex top-0 justify-start" >
     <app-generic-title size="medium">Les Technologies</app-generic-title>
   </div>
   <div class="flex gap-2 text-xs text-links-blue flex-wrap">
