--- a/src/app/generic-title/generic-title/generic-title.html
+++ b/src/app/generic-title/generic-title/generic-title.html
@@ -1,6 +1,7 @@
 <h2
     class="font-poppins text-center"
     [ngClass] = "[getClass(), color, boldness]"
+    [style.line-height]="lineHeight"
 >
    <ng-content></ng-content>
 </h2>
