--- a/src/app/hero/hero-card/hero-card.html
+++ b/src/app/hero/hero-card/hero-card.html
@@ -1,6 +1,6 @@
-<div class="relative
-py-5 w-3/5 md:w-2/5 h-[350px] bg-[#026ba5]/90 p-6 rounded-2xl shadow-lg
-  text-left md:h-96">
+<div class="relative py-5 w-[300px] h-[310px] sm:w-3/5 sm:h-[350px]
+bg-[#026ba5]/90 p-6 rounded-2xl shadow-lg
+  text-left md:h-96 md:w-3/5">
   <!-- Background Image Layer -->
   <div class="absolute inset-x-0 bottom-0 h-1/2 bg-bottom opacity-90 blur-[0.5px]"
     style="background-image: url('/background-images/generic-background/background1.svg');
@@ -11,10 +11,10 @@ py-5 w-3/5 md:w-2/5 h-[350px] bg-[#026ba5]/90 p-6 rounded-2xl shadow-lg
 
   <!-- Content Layer -->
   <div class="relative z-10">
-    <h1 class="text-3xl font-bold md:ml-5 mb-4 text-white">
+    <h1 class="text-2xl sm:text-3xl font-bold md:ml-5 mb-4 text-white">
       Progrès innovant
     </h1>
-    <p class="mb-9 sm:!mb-12 md:!mb-20 md:!ml-5 whitespace-normal text-white">
+    <p class="text-sm sm:text-base mb-9 sm:!mb-12 md:!mb-20 md:!ml-5 whitespace-normal text-white">
       Wind Consulting vous accompagne pour innover et progresser durablement grâce à des solutions digitales sur mesure
       alliant performance et agilité.
     </p>
