--- a/src/app/newsletter/newsletter.html
+++ b/src/app/newsletter/newsletter.html
@@ -1,15 +1,12 @@
 <div class="pt-12 pb-0 md:py-12 flex flex-col justify-center gap-11">
-  <app-generic-title size="large">
-    <span class="betweenLinesSpacing">
+  <app-generic-title class="px-4" lineHeight="1.6 !important" size="large">
       Abonner-vous à notre newsletter
-    </span>
-    <!-- add some leading -->
   </app-generic-title>
-  <p class="text-center specialFont text-links-blue leading-7 px-12 md:px-[30%]">
+  <p class="text-center specialFont text-links-blue leading-7 px-4 sm:px-12 md:px-[30%]">
     L’enthousiasme vous guidera loin… Peut-être jusqu’à
     votre prochaine aventure professionnelle.
   </p>
-  <div class="flex justify-center">
+  <div class="flex justify-center left-1/2 translate-x-1/2 w-96">
     <app-button-with-label label = "Entrez votre email ici"
       buttonLabel = "Soumettre"
     ></app-button-with-label>
