--- a/src/app/orbit-technology/orbit-technology.css
+++ b/src/app/orbit-technology/orbit-technology.css
@@ -1,6 +1,20 @@
 .orbit-container {
-  width: 450px;
-  height: 450px;
+  width: 300px;
+  height: 300px;
+}
+
+@media (min-width: 375px) {
+  .orbit-container {
+    width: 350px;
+    height: 350px;
+  }
+}
+
+@media (min-width: 640px) {
+  .orbit-container {
+    width: 450px;
+    height: 450px;
+  }
 }
 
 @media (min-width: 768px) {
