added minor fixes

--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,4 +1,4 @@
-<footer class="absolute w-full h-[1010px] sm:h-[955px] md:h-[550px] top-wave overflow-hidden text-white specialFont">
+<footer class="absolute w-full h-[1050px] xs:h-[1025px] sm:h-[955px] md:h-[550px] top-wave overflow-hidden text-white specialFont">
 
   <!-- Background image layer -->
   <div class="footer-image-back absolute inset-0 z-0"></div>
