--- a/src/app/chiffres-cles/chiffres-cles.html
+++ b/src/app/chiffres-cles/chiffres-cles.html
@@ -1,5 +1,5 @@
-<div class="relative chiffresClesBack overflow-hidden h-full py-8 xs:py-12"
-      [ngClass]="{'!h-[110vh]': showScrollButtons,
+<div class="relative flex flex-col justify-center chiffresClesBack overflow-hidden h-full md:h-[500px] py-8 xs:py-12"
+      [ngClass]="{'!h-[120vh]': showScrollButtons,
                   '!h-[115vh]': !showScrollButtons}">
   <!-- if u have to change th class again maybe just  -->
   <div class="absolute w-2/3 lg:w-2/5 h-[100%] z-10 right-0 top-1/2 -translate-y-1/2
