--- a/src/app/newsletter/newsletter.html
+++ b/src/app/newsletter/newsletter.html
@@ -1,12 +1,12 @@
-<div class="pt-12 pb-0 md:py-12 flex flex-col justify-center gap-11">
+<div class="relative pt-6 pb-0 md:py-6 flex flex-col justify-center gap-4 md:gap-10 h-72 md:h-80">
   <app-generic-title class="px-4" lineHeight="1.6 !important" size="large">
       Abonner-vous à notre newsletter
   </app-generic-title>
-  <p class="text-center specialFont text-links-blue leading-7 px-4 sm:px-12 md:px-[30%]">
+  <p class="text-center text-sm sm:text-base specialFont text-links-blue leading-7 px-4 sm:px-12 md:px-[30%]">
     L’enthousiasme vous guidera loin… Peut-être jusqu’à
     votre prochaine aventure professionnelle.
   </p>
-  <div class="flex justify-center left-1/2 translate-x-1/2 w-96">
+  <div class="absolute flex -bottom-20 justify-center left-1/2 -translate-x-1/2 h-20 w-48 sm:h-28 sm:w-96">
     <app-button-with-label label = "Entrez votre email ici"
       buttonLabel = "Soumettre"
     ></app-button-with-label>
