--- a/src/app/buttons/button-with-label/button-with-label.html
+++ b/src/app/buttons/button-with-label/button-with-label.html
@@ -1,4 +1,4 @@
-<div class="border-3 w-80 md:w-96 bg-white border-solid border-wind-blue rounded-full flex justify-end">
+<div class="border-3 w-72 sm:w-80 md:w-96 bg-white border-solid border-wind-blue rounded-full flex justify-end">
   <!-- this is the label -->
   <div class="flex flex-1 items-center justify-center md:justify-start">
     <input type="text" class="absolute specialFont bg-transparent focus:outline-none flex-shrink-0 pl-6"
