--- a/src/app/hero/hero-background/hero-background.html
+++ b/src/app/hero/hero-background/hero-background.html
@@ -1,5 +1,5 @@
 <div class="absolute inset-0 bg-cover bg-center bottom-wave"
-  style="background-image: url('/background1.gif')">
+  style="background-image: url('/public/background1.gif')">
   <div class="w-full h-full bg-gradient-to-tr from-black/50 to-transparent">
 
   </div>
