--- a/src/app/footer/footer-links/footer-links.html
+++ b/src/app/footer/footer-links/footer-links.html
@@ -2,7 +2,7 @@
   <!-- logo and mission and social media icons -->
   <div class="md:logo-mission">
     <div class="flex flex-col items-center md:items-start gap-3">
-      <img class="w-36 h-16 xs:w-40 xs:h-20" src="/logo-wind-white.png"/>
+      <img class="w-36 h-16 xs:w-40 xs:h-20" src="/public/logo-wind-white.png"/>
       <p class="text-xs text-center md:!text-left md:pr-4 px-10 xs:px-20 sm:px-32 md:px-0" style="line-height: 2">
         Wind Consulting a pour mission de concevoir
         et mettre en oeuvre les meilleures solutions Software visant
