--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -5,7 +5,7 @@
 
   <!-- The logo -->
   <div #mainContent class="text-xl font-bold flex-shrink-0">
-    <img src="logo-wind.png" alt="logo" class="h-16 w-24
+    <img src="/public/logo-wind.png" alt="logo" class="h-16 w-24
         sm:h-16 sm:w-30" />
   </div>
 
@@ -27,7 +27,7 @@
 
     <!-- The contact us button -->
     <div *ngIf="showContactUsButton">
-      <app-button-with-background backgroundImageUrl="background-images/generic-background/background1.svg"
+      <app-button-with-background backgroundImageUrl="/public/background-images/generic-background/background1.svg"
         label="Contacter Nous" width="w-48" height="h-10"
         [logo]=true logoSize="size-10" backgroundPosition="bottom">
 
@@ -102,14 +102,14 @@
     <div class="md:hidden absolute !right-0 top-1/4 translate-y-1/4 pr-3 sm:pr-10">
       <app-circular-button icon="search" [outline]="true" outlineColor="border-links-blue" bgColor="bg-links-blue"
         size="w-12 h-12" [strokeWidth]=2 outlineWidth="border-2" strokeColor="stroke-white"
-        bgImage="background-images/generic-background/background1.svg">
+        bgImage="/public/background-images/generic-background/background1.svg">
       </app-circular-button>
     </div>
 
 
     <!-- Desktop Search -->
     <div class="hidden md:block md:absolute md:right-28 lg:right-32 translate-y-1/3">
-      <app-button-with-background backgroundImageUrl="background-images/generic-background/background1.svg"
+      <app-button-with-background backgroundImageUrl="/public/background-images/generic-background/background1.svg"
         label="Recherche" width="w-48" height="h-10" icon="search" strokeColor="stroke-white" [strokeWidth]=2
         [logo]=true backgroundPosition="bottom" logoSize="size-10">
 
